--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       />
       <input type="submit" value="Log In" />
     </form>
-
+    <a href="https://naver.com">naver</a>
     <script src="app.js"></script>
   </body>
 </html>
