--- a/index.html
+++ b/index.html
@@ -8,27 +8,34 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" />
   </head>
   <body>
-    <form class="hidden" id="login-form">
-      <input
-        required
-        maxlength="15"
-        type="text"
-        placeholder="What is your name?"
-      />
-      <input type="submit" value="Log In" />
-    </form>
-    <h2 id="clock">00:00:00</h2>
-    <h1 id="greeting" class="hidden"></h1>
-    <form id="todo-form">
-      <input type="text" placeholder="Write a To Do and Press Enter" />
-    </form>
-    <ul id="todo-list"></ul>
-    <div id="quote">
-      <span></span>
-      <span></span>
+    <div class="container">
+      <h2 id="clock">00:00:00</h2>
+      <div id="weather">
+        <span></span>
+        <span></span>
+      </div>
+
+      <form class="hidden" id="login-form">
+        <input
+          required
+          maxlength="15"
+          type="text"
+          placeholder="What is your name?"
+        /><br />
+        <input type="submit" value="Log In" />
+      </form>
+      <h1 id="greeting" class="hidden"></h1>
+      <div class="todo-div">
+        <h3>To Do List</h3>
+        <form id="todo-form">
+          <input type="text" placeholder="Write a To Do and Press Enter" />
+        </form>
+        <ul id="todo-list"></ul>
+      </div>
     </div>
-    <div id="weather">
-      <span></span>
+
+    <div id="quote">
+      <span></span> -
       <span></span>
     </div>
     <script src="js/greetings.js"></script>
